update comment list

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -2485,6 +2485,9 @@ readers do not read off random characters that represent icons */
 .fa-pen-square:before {
   content: "\f14b"; }
 
+.fa-pencil:before {
+  content: "\f040"; }
+
 .fa-pencil-alt:before {
   content: "\f303"; }
 
