--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -6,7 +6,7 @@
             <i class="fas fa-phone"></i> (852)-555-5555
           </div>
           <div class="col-md-4">
-            <i class="fas fa-envelope-open"></i> contact@healthcare.co
+            <i class="fas fa-envelope-open"></i> contact@erb8shop.com
           </div>
           <div class="col-md-4">
             <div class="social text-right">
