--- a/templates/orders/order/create.html
+++ b/templates/orders/order/create.html
@@ -26,7 +26,7 @@
           <div class="row form-row">
               <div class="col-md-6 mb-3">                 
                   <div class="input-group-icon">
-                      <i class="fas fa-user"></i> <label for="id_first_name" class="form-label">First Name <span class="required-asterisk">*</span></label>
+                      <i class="fas fa-user"></i> <label for="id_first_name" class="form-label ml-1">First Name <span class="required-asterisk">*</span></label>
                       <input type="text" name="first_name" class="form-control prefilled-value" id="id_first_name" value="{{current_user.first_name}}" readonly>
                       <div class="form-note">Pre-filled from your account</div>
                   </div>
@@ -35,7 +35,7 @@
             <div class="row form-row">
               <div class="col-md-6 mb-3">                 
                   <div class="input-group-icon">
-                    <i class="fas fa-user"></i> <label for="id_last_name" class="form-label">Last Name <span class="required-asterisk">*</span></label>
+                    <i class="fas fa-user"></i> <label for="id_last_name" class="form-label ml-1">Last Name <span class="required-asterisk">*</span></label>
                     <input type="text" name="last_name" class="form-control prefilled-value" id="id_last_name" value="{{current_user.last_name}}" readonly>
                   </div>
                   <div class="form-note">Pre-filled from your account</div>
@@ -44,7 +44,7 @@
             <div class="row form-row">
               <div class="col-md-6 mb-3">               
                 <div class="input-group-icon">
-                    <i class="fas fa-home"></i> <label for="id_address" class="form-label">Address <span class="required-asterisk">*</span></label>
+                    <i class="fas fa-home"></i> <label for="id_address" class="form-label ml-1">Address <span class="required-asterisk">*</span></label>
                     <input type="text" name="address" class="form-control" id="id_address" placeholder="Enter your street address" value="{{current_user.address}}" required/>
                 </div>
                 <div class="form-note">Please include apartment/suite number if applicable</div>
@@ -60,20 +60,20 @@
                   <div class="form-note">Pre-filled from your account</div>
               </div>
             </div>
-            <div class="row form-row" style="display:none;">
+            <div class="row form-row" style="display:normal;">
               <div class="col-md-6 mb-3">                  
                   <div class="input-group-icon">
-                    <i class="fas fa-map-marker-alt"></i><label for="id_postal_code" class="form-label">Postal code <span class="required-asterisk">*</span></label>
+                    <i class="fas fa-map-marker-alt"></i><label for="id_postal_code" class="form-label ml-1">Postal code <span class="required-asterisk">*</span></label>
                     <input type="text" name="postal_code" class="form-control prefilled-value" id="id_postal_code" value="{{current_user.postal_code}}" required>
                   </div>
                   <div class="form-note">Pre-filled from your account</div>
               </div>
             </div>
-            <div class="row form-row" style="display:none;">
+            <div class="row form-row" style="display:normal;">
               <div class="col-md-6 mb-3">
                   
                   <div class="input-group-icon">
-                    <i class="fas fa-city"></i><label for="id_city" class="form-label">City<span class="required-asterisk">*</span></label>
+                    <i class="fas fa-city"></i><label for="id_city" class="form-label ml-1">City<span class="required-asterisk">*</span></label>
                     <input type="text" name="city" class="form-control prefilled-value" id="id_city" value="{{current_user.city}}" required>
                   </div>
                   <div class="form-note">Pre-filled from your account</div>
