--- a/templates/accounts/password_change_done.html
+++ b/templates/accounts/password_change_done.html
@@ -4,5 +4,5 @@
 
 {% block content %}
   <h1>Password changed</h1>
-  <p>Your password has been successfully changed.</p>
+  <p>Your password has been successfully changed. You can <a href="{% url "accounts:login" %}">log in now</a></p>
 {% endblock %}
